Actualizaciones y mejoras visuales

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <title>Mi Porfolio Personal</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <a href="#acerca-de-mi">Acerca de mí</a>
-                <a href="#habilidades">Habilidades</a>
-                <a href="#experiencia">Experiencia</a>
-                <a href="#proyectos">Proyectos</a>
-                <a href="#contacto">Contacto</a>
+                <a class="menu-item" href="#acerca-de-mi">Acerca de mí</a>
+                <a class="menu-item" href="#habilidades">Habilidades</a>
+                <a class="menu-item" href="#experiencia">Experiencia</a>
+                <a class="menu-item" href="#proyectos">Proyectos</a>
+                <a class="menu-item" href="#contacto">Contacto</a>
             </ul>
         </nav>
         <h1>Francisco Aquino Fretes</h1>
@@ -56,8 +60,11 @@
             <h2>Proyectos</h2>
             <ul>
                 <li>
-                    <a href="https://es.pdfdrive.com/">Sitio gratuito para descargar libros</a>
+                    <a href="https://es.pdfdrive.com/">PDF DRIVE</a>
+
                 </li>
+                <p>Sitio web para descargas gratuitas de archivos PDF
+                </p>
             </ul>
         </section>
         <section id="contacto">
@@ -66,12 +73,12 @@
                 <li>Email: fran92f@gmail.com</li>
                 <li>Celular: 0971902069</li>
                 <li>Redes Sociales:
-                    <ul>
+                    <ul id="Sociales">
                         <li>
                             <a href="https://www.facebook.com/franaquino7333">Facebook</a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/francisco__aquino__/">Instagram</a>
+                            <a href="https://www.instagram.com/francisco__aquino__/" class="instagram">Instagram</a>
                         </li>
                     </ul>
                 </li>
